feat: 完善小细节（前端）